--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^3.0.0-beta.0",
     "@angular/common": "~12.1.1",
     "@angular/core": "~12.1.1",
     "@angular/forms": "~12.1.1",
@@ -23,9 +24,11 @@
     "@capacitor/camera": "^1.1.2",
     "@capacitor/cli": "3.2.4",
     "@capacitor/core": "3.2.4",
+    "@capacitor/geolocation": "^1.1.2",
     "@ionic/angular": "^5.5.2",
     "@ionic/pwa-elements": "^3.0.2",
     "@ionic/storage-angular": "^3.0.6",
+    "@types/googlemaps": "^3.39.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
